Update first picture

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ section.module.parallax h1 {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 section.module.parallax-1 {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/125980/stPauls2.jpg");
+  background-image: url("http://8-themes.com/wp-content/uploads/2015/11/Animals___Dogs_Faithful_cheerful_corgi_097573_.jpg");
 }
 section.module.parallax-2 {
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/125980/blueprint.jpg");
