--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,8 @@ section.module h2 {
   font-size: 45px;
   text-align: left;
 }
+/* job titles */
+
 section.module p {
   margin-bottom: 40px;
   font-size: 16px;
@@ -99,8 +101,11 @@ section.module.parallax-4 {
   padding-top: 50px;
   padding-bottom: 20px;
 }
-.img-circle{
+.img-circle {
   max-height: 30vh;
+}
+.company-img-circle {
+  max-height: 25vh;
 }
 .img-center{
   display: block;
@@ -110,10 +115,31 @@ section.module.parallax-4 {
   font-size: 35px;
   color: black;
 }
-.work-description {
+.project-description {
   text-align: center;
 }
-.work-description h3 {
+.project-description h3 {
   font-size: 150%;
   font-weight: bold;
+}
+.job-description {
+  text-align: left;
+  width: 100%;
+}
+.job-description h3 {
+  margin-bottom: 10px;
+  font-size: 30px;
+  text-align: left;
+}
+.job-description h4 {
+  margin-bottom: 10px;
+  font-size: 14px;
+  text-align: left;
+  color: grey;
+}
+.job-description p {
+  font-size: 11px;
+}
+.job-description ul {
+  padding-left: 40px;
 }
