--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,14 @@ section.module.parallax-4 {
 
 /* ============================================================ */
 .pic-col {
-  padding-top: 50px;
+  padding-top: 40px;
   padding-bottom: 20px;
 }
-.img-circle {
+.img-circle, .img-leadership {
   max-height: 30vh;
 }
 .company-img-circle {
-  max-height: 25vh;
+  max-height: 23vh;
 }
 .img-center{
   display: block;
@@ -122,6 +122,7 @@ section.module.parallax-4 {
 .projects {
   align-items: center;
 }
+
 .project-description {
   text-align: center;
 }
@@ -129,9 +130,12 @@ section.module.parallax-4 {
   font-size: 150%;
   font-weight: bold;
 }
+
 .job-description {
   text-align: left;
   width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .job-description h3 {
   margin-bottom: 10px;
@@ -145,8 +149,47 @@ section.module.parallax-4 {
   color: grey;
 }
 .job-description p {
-  font-size: 11px;
+  font-size: 95%;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 .job-description ul {
   padding-left: 40px;
+}
+.no-padding {
+  padding: 0px;
+}
+
+.leadership {
+  text-align: center;
+}
+.leadership h3 {
+  font-weight: lighter;
+  font-size: 23px;
+}
+
+.resume {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.resume a {
+  font-size: 20px;
+  line-height: 1.0;
+  padding: 12px 35px 12px 35px;
+	border: 1px solid rgba(170, 170, 170, 1.0);
+	text-align: center;
+  border-radius: 5px;
+  background-color: rgba(170, 170, 170, 1.0);
+  color: white;
+  -o-transition:color .2s ease-out, background .2s ease-in;
+  -ms-transition:color .2s ease-out, background .2s ease-in;
+  -moz-transition:color .2s ease-out, background .2s ease-in;
+  -webkit-transition:color .2s ease-out, background .2s ease-in;
+  transition:color .2s ease-out, background .2s ease-in;
+}
+.resume a:hover {
+  text-decoration: none;
+  background: rgba(100, 100, 100, 1.0);
+  color: white;
 }
