--- a/css/style.css
+++ b/css/style.css
@@ -84,17 +84,17 @@ section.module.parallax h1 {
 }
 section.module.parallax-1 {
   /*background-image: "assets/corgi.jpg";*/
-  background-image: url("../assets/corgi.jpg");
+  background-image: url("../assets/mac.jpg");
   height: 100vh;
 }
 section.module.parallax-2 {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/125980/blueprint.jpg");
+  background-image: url("../assets/digitaltech.jpg");
 }
 section.module.parallax-3 {
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/125980/typewriter.jpg");
 }
 section.module.parallax-4 {
-  background-image: url('../assets/pug.jpg');
+  background-image: url('../assets/corgi.jpg');
 }
 
 /* ============================================================ */
@@ -158,6 +158,7 @@ section.module.parallax-4 {
 }
 .no-padding {
   padding: 0px;
+  text-align: center;
 }
 
 .leadership {
