--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,10 @@
   max-height: 30vh;
   border-radius: 50%;
 }
-
-.center{
+.center {
   display: block;
   margin: auto;
+}
+.company {
+  max-height: 10vh;
 }
