--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,19 +2,38 @@
   max-height: 30vh;
   border-radius: 50%;
 }
+
 .center {
   display: block;
   margin: auto;
 }
-.company {
-  max-height: 10vh;
-}
+
+h1,
+h2,
 h3 {
-  margin-bottom: 0px;
+  color: rgb(65, 65, 65);
+  font-family: 'Work Sans', sans-serif;
+
 }
-h4 {
-  color: darkgray;
+
+h1 {
+  font-size: 5vh;
 }
+
+h2 {
+  font-size: 2.5vh;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 2vh;
+  font-weight: lighter;
+}
+
 .centered_section {
   width: 100%;
+}
+
+.headshot {
+  height: 90vh;
 }
