--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,10 +30,54 @@ h3 {
   font-weight: lighter;
 }
 
-.centered_section {
+
+
+/* For mobile phones: */
+[class*="col-"] {
   width: 100%;
 }
 
 .headshot {
-  height: 90vh;
+  height: 50vh;
+}
+
+
+@media only screen and (max-width: 600px) {
+
+  .parent-container {
+    display: flex;
+    margin-top: 2vh;
+    flex-direction: column-reverse;
+  }
+
+  .text-content {
+    padding: 0 5%;
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+
+  /* For desktop: */
+  .parent-container {
+    display: flex;
+    margin-top: 5vh;
+  }
+
+  .col-left {
+    width: 40%;
+  }
+
+  .text-content {
+    padding-left: 25%;
+    padding-top: 10%;
+  }
+
+  .col-right {
+    width: 60%;
+  }
+
+  .headshot {
+    height: 90vh;
+  }
 }
